@@ -2,5 +2,6 @@ local Constants = {}
 
 Constants.ModName = "zooming_out_screenshots"
 Constants.AssetModName = "__" .. Constants.ModName .. "__"
+Constants.LogFileName = Constants.ModName .. "_logOutput.txt"
 
 return Constants
