@@ -17,7 +17,7 @@ mod-toggle-button=Toggle the Zooming Screenshots GUI on/off
 take-all-screenshots-button=Closes this GUI and then takes the planned screenshots
 start-zoom=20 is just player, 10 is a few tiles border on player. depends exactly on resolution
 start-zoom-test-screenshot=Take a test screenshot at the Start Zoom magnification. GUI is left open and uses other settings.
-end-zoom=1 is standard zoom, fraction zooms out further. Is target and may be more/less, see mod details.
+end-zoom=1 is standard zoom, fraction zooms out further. Is a target final zoom level and may be more/less, see mod details. Minimum Factorio final zoom value: 0.04
 end-zoom-test-screenshot=Take a test screenshot using the Target End Zoom to give an approximate zoom indication. GUI is left open and uses other settings.
 screenshot-count=How many screenshots to take between the start and end zooms
 resolution=The resolution X and Y of the screenshot
