@@ -4,6 +4,7 @@ Date: 2020-01-26
   Features:
     - updated to Factorio 0.18 as-is
   Changes:
+    - max zoom out locked at 0.04 as this is a reliably working min zoom Facotrio 0.18 supports. done in a clunky way for now.
   Bugfixes:
   Info:
 ---------------------------------------------------------------------------------------------------
